# AutonomousRobots

./: tokengit.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/include/: nlopt.f  nlopt.h  nlopt.hpp
devel/lib/: libglog.la  libglog.so.0  libglog.so.0.0.0  libnlopt_cxx.la
logs/arob_lab5/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.015.log.stderr  build.make.027.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.044.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  build.make.052.log.stderr  build.make.063.log.stderr  build.make.064.log.stderr  build.make.065.log.stderr  build.make.066.log.stderr  build.make.069.log.stderr  build.make.070.log.stderr  build.make.072.log.stderr  build.make.076.log.stderr  build.make.081.log.stderr  build.make.082.log.stderr  build.make.083.log.stderr  build.make.084.log.stderr  build.make.086.log.stderr  build.make.087.log.stderr  build.make.088.log.stderr
logs/eigen_checks/: build.check.038.log.stderr
logs/glog_catkin/: build.check.039.log.stderr  build.make.000.log.stderr
logs/hector_quadrotor_gazebo_plugins/: build.check.008.log.stderr
logs/hector_quadrotor_model/: build.check.008.log.stderr
logs/lab2_drones/: build.make.001.log.stderr
logs/lab3_drones/: build.make.007.log.stderr  build.make.008.log.stderr  build.make.012.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.028.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr  build.make.053.log.stderr  build.make.056.log.stderr  build.make.057.log.stderr  build.make.059.log.stderr
src/arob_lab5-main/: CMakeLists.txt  (+3 more)
src/final_work/: CMakeLists.txt  README.md
src/final_work/cfg/: arob_lab3.rviz
src/final_work/include/lab3_drones/: drone_race.hpp  kalman_filter.hpp
src/final_work/src/: drone_race.cpp
src/p00_arob_lab3_drones/: package.xml
src/p00_arob_lab3_drones/data/: gates_noise.txt
src/p00_arob_lab3_drones/include/lab3_drones/: drone_race.hpp
src/p00_arob_lab3_drones/src/: drone_race.cpp  drone_race_node.cpp
(+999 files in other folders)
