<package format="2">
	<name>lab3_drones</name>
	<version>0.0.0</version>
	<description>The lab3_drones package</description>
	<maintainer email="root@todo.todo">root</maintainer>
	<license>TODO</license>
	<author email="jane.doe@example.com">Jane Doe</author>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>visualization_msgs</depend>
	<depend>tf2</depend>
	<depend>mav_trajectory_generation</depend>
	<depend>mav_trajectory_generation_ros</depend>
	
</package>
